# remOcular

./: .gitignore  CHANGES  COPYRIGHT  Makefile.am  Makefile.in  README  configure  configure.ac  installer.sh  make_dist.sh  release-remocular.sh
PR/: netnod-2011-10.odp  remocular-digicomp-2012-04.odp  remocular-netnod-2011-10.odp
backend/: Makefile.am  Makefile.in
backend/etc/: Makefile.am  remocular.cfg  remocular.cfg.dist
backend/lib/: Makefile.am  remOcular.pm
backend/lib/MojoX/Dispatcher/Qooxdoo/: Jsonrpc.pm  Jsonrpc.pm~
backend/lib/remOcular/: Config.pm  Exception.pm  Exception.pm~  JsonRpcService.pm  JsonRpcService.pm~  MojoApp.pm  MojoApp.pm~  Plugin.pm  Plugin.pm~  Service.pm  Session.pm
backend/lib/remOcular/Plugin/: Df.pm  IoStat.pm  MpStat.pm  Nmap.pm  Top.pm  TraceRoute.pm  TraceRoute.pm~
backend/public/: Makefile.am  index.html
backend/script/: remocular.pl  remocular.pl~
client/: Manifest.json  config.json  generate.py
client/source/: index.html
client/source/class/remocular/: Application.js
client/source/class/remocular/patch/: HistoryEncoder.js
client/source/class/remocular/test/: DemoTest.js
client/source/class/remocular/theme/: Appearance.js  Color.js  Decoration.js  Font.js  Theme.js  __init__.js
client/source/class/remocular/ui/: Form.js  InfoBar.js  MHoverFx.js  Menu.js  MsgBox.js  Task.js  TaskLogo.js
client/source/class/remocular/ui/form/renderer/: Left.js  Top.js
client/source/class/remocular/ui/table/: Table.js
client/source/class/remocular/ui/table/cellplotter/: Bar.js  SparkLine.js  TwoBar.js
client/source/class/remocular/ui/table/cellrenderer/: Canvas.js
client/source/class/remocular/ui/table/model/: ToolTip.js
client/source/class/remocular/ui/table/pane/: Pane.js
client/source/class/remocular/util/: DataProcessor.js  HistoryIgnoreCounter.js  IAggregator.js  MHistory.js  MHistoryEncoder.js  Poller.js  Server.js
client/source/class/remocular/util/aggregator/: Abstract.js  Average.js  Counter.js  Maximum.js  Median.js  Minimum.js  PassThrough.js  Stack.js  StandardDeviation.js  Static.js
client/source/class/smokescope/: Application.js
client/source/class/smokescope/patch/: HistoryEncoder.js
client/source/class/smokescope/test/: DemoTest.js
client/source/class/smokescope/theme/: Appearance.js  Font.js  Theme.js
client/source/class/smokescope/ui/: Form.js  InfoBar.js  Menu.js  MsgBox.js
client/source/class/smokescope/ui/form/renderer/: Left.js  Top.js
client/source/class/smokescope/ui/table/: Table.js
client/source/class/smokescope/util/: DataProcessor.js  HistoryIgnoreCounter.js  Server.js
client/source/class/smokescope/util/aggregator/: Average.js  Counter.js  Maximum.js  Minimum.js  StandardDeviation.js  Static.js
client/source/resource/remocular/: logo.xar
client/source/translation/: de.po  en.po
docs/: remocular_install.pod
frontend/: Makefile.am  Makefile.in  Manifest.json  build  config.json  generate.sh
frontend/source/: index.html
frontend/source/class/remocular/: Application.js
frontend/source/class/remocular/theme/: Appearance.js  Color.js  Decoration.js  Font.js
frontend/source/class/remocular/ui/: InfoBar.js  Menu.js  MsgBox.js  TaskLogo.js
frontend/source/class/remocular/ui/form/renderer/: Top.js
frontend/source/class/remocular/ui/table/cellplotter/: SparkLine.js
frontend/source/class/remocular/util/: DataProcessor.js  Poller.js  Server.js
frontend/source/class/remocular/util/aggregator/: Minimum.js  Stack.js  Static.js
install/: build_missing_perlmodules.sh  make_dist.sh  module_builder.inc
server/etc/: remocular.cfg  remocular.cfg.dist
server/lib/Qooxdoo/: JSONRPC.pm  SessionLite.pm
server/lib/RemOcular/: Base.pm  Config.pm  Plugin.pm  PluginHelper.pm
server/lib/RemOcular/JsonRpc/: remocular.pm
server/lib/RemOcular/Plugin/: Df.pm  IoStat.pm  MpStat.pm  Top.pm  TraceRoute.pm
server/lib/SmokeScope/: Base.pm  Config.pm
server/lib/SmokeScope/JsonRpc/: smokescope.pm
server/lib/SmokeScope/Plugin/: Df.pm  Top.pm  TraceRoute.pm
server/lib/remOcular/: Base.pm  Config.pm  Plugin.pm  PluginHelper.pm
server/lib/remOcular/JsonRpc/: remocular.pm
server/lib/remOcular/Plugin/: Df.pm  IoStat.pm  MpStat.pm  Top.pm  TraceRoute.pm
server/setup/: build_base_software.sh  build_software.helpers  setup_missing_perl_modules.inc  setup_missing_perl_modules.sh
setup/: build-perl-modules.sh
